add correct header

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,9 +1,8 @@
 ---
 import '../main.css'
-import NavElTiempo from '$components/NavElTiempo.astro'
 
-const metaTitle = 'ElTiempo Content'
-const metaDescription = ''
+const metaTitle = '¿Hamburguesas con GPS? Disfruta de un verano sin interrupciones'
+const metaDescription = 'McDonald’s lanza el reto McAuto con el que se compromete a entregarte tu pedido en un máximo de 2 minutos desde que pagas, so pena de 4 nuggets sino lo consiguen.'
 ---
 
 <!doctype html>
@@ -16,18 +15,226 @@ const metaDescription = ''
 		<meta property="description" content={metaDescription} />
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="/" />
-		<meta property="og:image" content="/thumbnail.png" />
+		<meta property="og:image" content="/thumbnail.jpg" />
 		<meta property="og:title" content={metaTitle} />
 		<meta property="og:description" content={metaDescription} />
 		<meta property="twitter:card" content="summary_large_image" />
-		<meta property="twitter:image" content="/thumbnail.png" />
+		<meta property="twitter:image" content="/thumbnail.jpg" />
 		<meta property="twitter:title" content={metaTitle} />
 		<meta property="twitter:description" content={metaDescription} />
 		<link rel="icon" href="/favicon.png" />
+		<link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet" />
+
+		<link rel="apple-touch-icon-precomposed" sizes="152x152" href="https://statics.eltiempo.es/images/v2.3.0/152x152.png" />
+		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="https://statics.eltiempo.es/images/v2.3.0/72x72.png" />
+		<link rel="apple-touch-icon-precomposed" sizes="57x57" href="https://statics.eltiempo.es/images/v2.3.0/57x57.png" />
+		<link rel="shortcut icon" href="https://statics.eltiempo.es/images/v2.3.0/16x16.png" />
+
+		<script type="text/javascript">
+			if (!window.didomiConfig) {
+				window.didomiConfig = {}
+			}
+			if (!window.didomiConfig.notice) {
+				window.didomiConfig.notice = {}
+			}
+			window.didomiConfig.notice.enable = false
+		</script>
+		<script type="text/javascript" data-description="Didomi SDK">
+			window.gdprAppliesGlobally = true
+			;(function () {
+				function n(e) {
+					if (!window.frames[e]) {
+						if (document.body && document.body.firstChild) {
+							var t = document.body
+							var r = document.createElement('iframe')
+							r.style.display = 'none'
+							r.name = e
+							r.title = e
+							t.insertBefore(r, t.firstChild)
+						} else {
+							setTimeout(function () {
+								n(e)
+							}, 5)
+						}
+					}
+				}
+				function e(r, a, o, s, c) {
+					function e(e, t, r, n) {
+						if (typeof r !== 'function') {
+							return
+						}
+						if (!window[a]) {
+							window[a] = []
+						}
+						var i = false
+						if (c) {
+							i = c(e, n, r)
+						}
+						if (!i) {
+							window[a].push({ command: e, version: t, callback: r, parameter: n })
+						}
+					}
+					e.stub = true
+					e.stubVersion = 2
+					function t(n) {
+						if (!window[r] || window[r].stub !== true) {
+							return
+						}
+						if (!n.data) {
+							return
+						}
+						var i = typeof n.data === 'string'
+						var e
+						try {
+							e = i ? JSON.parse(n.data) : n.data
+						} catch (t) {
+							return
+						}
+						if (e[o]) {
+							var a = e[o]
+							window[r](
+								a.command,
+								a.version,
+								function (e, t) {
+									var r = {}
+									r[s] = { returnValue: e, success: t, callId: a.callId }
+									n.source.postMessage(i ? JSON.stringify(r) : r, '*')
+								},
+								a.parameter,
+							)
+						}
+					}
+					if (typeof window[r] !== 'function') {
+						window[r] = e
+						if (window.addEventListener) {
+							window.addEventListener('message', t, false)
+						} else {
+							window.attachEvent('onmessage', t)
+						}
+					}
+				}
+				e('__uspapi', '__uspapiBuffer', '__uspapiCall', '__uspapiReturn')
+				n('__uspapiLocator')
+				e('__tcfapi', '__tcfapiBuffer', '__tcfapiCall', '__tcfapiReturn')
+				n('__tcfapiLocator')
+				;(function (e) {
+					var t = document.createElement('link')
+					t.rel = 'preconnect'
+					t.as = 'script'
+					var r = document.createElement('link')
+					r.rel = 'dns-prefetch'
+					r.as = 'script'
+					var n = document.createElement('link')
+					n.rel = 'preload'
+					n.as = 'script'
+					var i = document.createElement('script')
+					i.id = 'spcloader'
+					i.type = 'text/javascript'
+					i['async'] = true
+					i.charset = 'utf-8'
+					var a = 'https://sdk.privacy-center.org/' + e + '/loader.js?target=' + document.location.hostname
+					if (window.didomiConfig && window.didomiConfig.user) {
+						var o = window.didomiConfig.user
+						var s = o.country
+						var c = o.region
+						if (s) {
+							a = a + '&country=' + s
+							if (c) {
+								a = a + '&region=' + c
+							}
+						}
+					}
+					t.href = 'https://sdk.privacy-center.org/'
+					r.href = 'https://sdk.privacy-center.org/'
+					n.href = a
+					i.src = a
+					var d = document.getElementsByTagName('script')[0]
+					d.parentNode.insertBefore(t, d)
+					d.parentNode.insertBefore(r, d)
+					d.parentNode.insertBefore(n, d)
+					d.parentNode.insertBefore(i, d)
+				})('c9724c50-1caa-40a9-9c18-ef7c27b8e01b')
+			})()
+		</script>
+		<script type="text/javascript" charset="UTF-8">
+			!(function () {
+				var cpBaseUrl = 'https://cp.eltiempo.es'
+				var cpController = cpBaseUrl + '/now.js'
+				var cpPropertyId = '4fb43238'
+
+				!(function (C, o, n, t, P, a, s) {
+					C['CPObject'] = n
+					C[n] ||
+						(C[n] = function () {
+							;(C[n].q = C[n].q || []).push(arguments)
+						})
+					C[n].l = +new Date()
+					a = o.createElement(t)
+					s = o.getElementsByTagName(t)[0]
+					a.src = P
+					s.parentNode.insertBefore(a, s)
+				})(window, document, 'cp', 'script', cpController)
+				cp('create', cpPropertyId, {
+					baseUrl: cpBaseUrl,
+				})
+				cp('render', {
+					onFullConsent: function () {
+						document.cookie = 'consent_state=0; SameSite=strict; Secure; path=/'
+					},
+				})
+				cp('authenticate', function (error, user) {
+					if (error) {
+						return
+					}
+
+					if (user.isLoggedIn() && user.hasValidSubscription()) {
+						document.cookie = 'consent_state=1; SameSite=strict; Secure; path=/'
+					} else {
+						document.cookie = 'consent_state=0; SameSite=strict; Secure; path=/'
+					}
+				})
+			})()
+		</script>
+
+		<!-- No se puede eliminar -->
+		<script>
+			;(function (w, d, s, l, i) {
+				w[l] = w[l] || []
+				w[l].push({
+					'gtm.start': new Date().getTime(),
+					event: 'gtm.js',
+				})
+				var f = d.getElementsByTagName(s)[0],
+					j = d.createElement(s),
+					dl = l != 'dataLayer' ? '&l=' + l : ''
+				j.async = true
+				j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl
+				f.parentNode.insertBefore(j, f)
+			})(window, document, 'script', 'dataLayer', 'GTM-K9DJJ6X')
+		</script>
+		<noscript>
+			<iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K9DJJ6X" height="0" width="0" style="display:none;visibility:hidden"></iframe>
+		</noscript>
+		<!-- End Google Tag Manager Eltiempo.es -->
 	</head>
 	<body>
-		<NavElTiempo />
+		<header class="m1 m1_t container bg-white py-2">
+			<div class="m1_c">
+				<div class="m1_r flex">
+					<p class="c2">
+						<a href="javascript:window.history.back()">
+							<img width="18" height="18" src="https://statics.eltiempo.es/images/v2.3.0/chevron-left.svg" alt="Regresar" />
+						</a>
+					</p>
+					<p class="c1 flex w-full justify-center">
+						<a href="https://www.eltiempo.es/"><img width="100" height="33" src="https://statics.eltiempo.es/images/v2.3.0/logo-eltiempo.svg" alt="Logo Eltiempo.es" /></a>
+					</p>
+				</div>
+			</div>
+		</header>
+
 		<slot />
+
 		<script src="../main.ts"></script>
 	</body>
 </html>
