--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,10 +29,10 @@ import imgCircle05 from '$assets/images/circle-05.webp'
 			<div class="reveal">
 				<h1 class="mb-6 max-w-100 text-4xl font-black uppercase reveal:translate-y-24 reveal:opacity-0 md:text-5xl">¿Hamburguesas con GPS?</h1>
 				<h2 class="mb-2 max-w-96 text-4xl leading-none reveal:translate-y-24 reveal:opacity-0 revealed:delay-100">Disfruta de un verano sin interrupciones</h2>
-				<p class="max-w-104 leading-tight reveal:translate-y-24 reveal:opacity-0 revealed:delay-200">McDonald’s lanza el reto McAuto con el que se compromete a entregarte tu pedido en un máximo de 2 minutos desde que pagas, so pena de 4 nuggets sino lo consiguen.</p>
+				<p class="max-w-104 leading-tight reveal:translate-y-24 reveal:opacity-0 revealed:delay-200">McDonald’s lanza el reto McAuto con el que se compromete a entregarte tu pedido en un máximo de 2 minutos desde que pagas, bajo pena de 4 nuggets sino lo consiguen.</p>
 			</div>
 
-			<div class="md:w-276 relative max-md:-mx-24 md:absolute md:left-40 md:top-2 xl:left-84">
+			<div class="relative max-md:-mx-24 md:absolute md:left-40 md:top-2 md:w-276 xl:left-84">
 				<Image src={imgHighway01} width={1656} alt="" quality={100} />
 				<Icon class="auto-1 absolute right-[27%] top-[30%] w-[3%]" name="auto" />
 				<Icon class="auto-2 absolute left-[48.5%] top-[75%] w-[3%]" name="auto" />
@@ -63,7 +63,7 @@ import imgCircle05 from '$assets/images/circle-05.webp'
 				<div class="relative -mt-16 ml-auto max-w-64 reveal:translate-y-24 reveal:opacity-0 md:-mt-36">
 					<span class="absolute inset-0 -z-10 -translate-x-2 translate-y-2 rounded-2xl bg-current"></span>
 					<div class="rounded-2xl border-2 border-current bg-white p-6 leading-tight">
-						<p>El <a class="font-bold text-[#FFBC0D] underline" href="https://mcdonalds.es/landings/mcauto">McAuto</a>, ese invento que nos permite <strong>pedir comida sin despeinarnos</strong> (más de lo que ya estamos después de un día de playa), se está convirtiendo en el mejor amigo del veraneante perezoso. ¿Quién necesita cocinar cuando puedes pasar por el <a class="font-bold text-[#FFBC0D] underline" href="https://mcdonalds.es/landings/mcauto">McAuto</a> de camino a casa y fingir que has estado horas frente a los fogones?.</p>
+						<p>El <a target="_blank" rel="sponsored" class="font-bold text-[#FFBC0D] underline" href="https://mcdonalds.es/landings/mcauto">McAuto</a>, ese invento que nos permite <strong>pedir comida sin despeinarnos</strong> (más de lo que ya estamos después de un día de playa), se está convirtiendo en el mejor amigo del veraneante perezoso. ¿Quién necesita cocinar cuando puedes pasar por el <a target="_blank" rel="sponsored" class="font-bold text-[#FFBC0D] underline" href="https://mcdonalds.es/landings/mcauto">McAuto</a> de camino a casa y fingir que has estado horas frente a los fogones?</p>
 					</div>
 				</div>
 			</div>
@@ -104,7 +104,7 @@ import imgCircle05 from '$assets/images/circle-05.webp'
 				<div class="relative -mt-16 ml-auto max-w-64 reveal:translate-y-24 reveal:opacity-0 md:-mt-48">
 					<span class="absolute inset-0 -z-10 -translate-x-2 translate-y-2 rounded-2xl bg-current"></span>
 					<div class="rounded-2xl border-2 border-current bg-white p-6 leading-tight">
-						<p>Pero McDonald's no se conforma con salvarte de cocinar después de un día de playa. Oh, no. También quiere ser <strong>tu compañero de viaje</strong> en esas excursiones veraniegas donde el GPS te lleva por caminos de cabras. Un <a class="font-bold text-[#FFBC0D] underline" href="https://mcdonalds.es/landings/mcauto">McAuto</a> estratégicamente ubicado puede ser el oasis en medio de ese desierto de aburrimiento que son las autopistas.</p>
+						<p>Pero McDonald's no se conforma con salvarte de cocinar después de un día de playa. Oh, no. También quiere ser <strong>tu compañero de viaje</strong> en esas excursiones veraniegas donde el GPS te lleva por caminos de cabras. Un <a target="_blank" rel="sponsored" class="font-bold text-[#FFBC0D] underline" href="https://mcdonalds.es/landings/mcauto">McAuto</a> estratégicamente ubicado puede ser el oasis en medio de ese desierto de aburrimiento que son las autopistas.</p>
 					</div>
 				</div>
 			</div>
@@ -128,7 +128,7 @@ import imgCircle05 from '$assets/images/circle-05.webp'
 				<div class="relative max-w-64 reveal:translate-y-24 reveal:opacity-0 max-md:-mt-16 max-md:ml-auto md:mb-16">
 					<span class="absolute inset-0 -z-10 -translate-x-2 translate-y-2 rounded-2xl bg-current"></span>
 					<div class="rounded-2xl border-2 border-current bg-white p-6 leading-tight">
-						<p>Claro, algunos dirán que esto es el fin de la cocina casera, que estamos criando una generación que no sabrá ni freír un huevo. Pero seamos realistas, ¿quién quiere cocinar cuando hace un calor que derretiría hasta a un pingüino? Al final, esta nueva forma de pedir comida rápida es como tener un genio de la lámpara, pero en lugar de tres deseos, te concede hamburguesas ilimitadas. Y aunque puede que no sea la solución a todos los problemas del mundo, al menos resolverá ese dilema eterno de <strong>"¿qué cenamos hoy?"</strong>.</p>
+						<p>Claro, algunos dirán que esto es el fin de la cocina casera, que estamos criando una generación que no sabrá ni freír un huevo. Pero seamos realistas, ¿quién quiere cocinar cuando hace un calor que derretiría hasta a un pingüino? Al final, esta nueva forma de pedir comida rápida es como tener un genio de la lámpara, pero en lugar de tres deseos, te concede hamburguesas ilimitadas. Y aunque puede que no sea la solución a todos los problemas del mundo, al menos resolverá ese dilema eterno de <strong>"¿qué cenamos hoy?"</strong></p>
 					</div>
 				</div>
 			</div>
@@ -136,7 +136,7 @@ import imgCircle05 from '$assets/images/circle-05.webp'
 
 		<div class="reveal overflow-clip bg-[#FFBC0D]">
 			<div class="container py-24 reveal:translate-y-24 reveal:opacity-0">
-				<h3 class="mx-auto max-w-3xl text-center text-xl font-bold md:text-3xl">Así que la próxima vez que estés de vacaciones y el hambre apriete, recuerda: tu smartphone ya no es solo para hacer selfies en la playa. Ahora también es tu pasaporte a un mundo donde la comida viene a ti, y no al revés. Bienvenidos al futuro de la comida rápida, donde las hamburguesas casi tienen GPS propio.</h3>
+				<h3 class="mx-auto max-w-3xl text-center text-xl font-bold md:text-3xl">Así que, la próxima vez que estés de vacaciones y el hambre apriete, recuerda: tu smartphone ya no es solo para hacer selfies en la playa. Ahora también es tu pasaporte a un mundo donde la comida viene a ti, y no al revés. Bienvenidos al futuro de la comida rápida, donde las hamburguesas casi tienen GPS propio.</h3>
 			</div>
 		</div>
 
@@ -145,6 +145,23 @@ import imgCircle05 from '$assets/images/circle-05.webp'
 			<div class="container py-12 text-center">
 				<p>ElTiempo Content para</p>
 				<Icon class="mx-auto mt-4 w-16" name="mcdonalds" />
+			</div>
+			<div class="container mt-4">
+				<ul class="c1 my-8 flex justify-center gap-8 text-xs">
+					<li>
+						<a href="https://www.eltiempo.es/legal/politica-privacidad.html">Política de Privacidad</a>
+					</li>
+					<li>
+						<a href="https://www.eltiempo.es/legal/condiciones-generales.html">Aviso legal</a>
+					</li>
+					<li>
+						<a href="https://www.eltiempo.es/legal/politica-cookies.html">Política de Cookies</a>
+					</li>
+				</ul>
+
+				<p class="mb-10 mt-8 text-center text-xs">
+					<a href="https://www.eltiempo.es/">© El tiempo, Pelmorex Weather Networks 2021</a>
+				</p>
 			</div>
 		</div>
 	</main>
