--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,7 +33,7 @@ import imgCircle05 from '$assets/images/circle-05.webp'
 			<div class="reveal">
 				<h1 class="mb-6 max-w-100 text-4xl font-black uppercase reveal:translate-y-24 reveal:opacity-0 md:text-5xl">Tu verano sin interrupciones</h1>
 
-				<p class="max-w-104 leading-tight reveal:translate-y-24 reveal:opacity-0 revealed:delay-200">No pierdas el tiempo en cocinar cuando vuelvas de la playa pasa por McAuto y llévate la cena/comida puesta. <br />Además, si haces tu pedido a través de la app con MyOrder ahorrarás tiempo. Podrás repetir tus pedidos anteriores y acumularás puntos en la app.</p>
+				<p class="max-w-104 leading-tight reveal:translate-y-24 reveal:opacity-0 revealed:delay-200">Vacaciones, desconexión… es el momento de divertirse y disfrutar. Y te vamos a ayudar a encontrar la comodidad que necesitas para vivir tu verano sin interrupciones.</p>
 			</div>
 
 			<div class="relative max-md:-mx-24 md:absolute md:left-40 md:top-2 md:w-276 xl:left-84">
@@ -46,7 +46,7 @@ import imgCircle05 from '$assets/images/circle-05.webp'
 				<div class="relative -mb-16 ml-auto max-w-64 reveal:translate-y-24 reveal:opacity-0 md:-mb-28">
 					<span class="absolute inset-0 -z-10 -translate-x-2 translate-y-2 rounded-2xl bg-current"></span>
 					<div class="rounded-2xl border-2 border-current bg-white p-6 leading-tight">
-						<p>Realizando tu pedido de forma previa en la app ahorrarás tiempo en el momento de pedir, sin discusiones con la familia. <br /><br /> No interrumpas tu día de playa: <a class="font-bold text-[#FFBC0D] underline" href="https://mcdonalds.es/restaurantes" target="_blank" rel="sponsored">pasa por McAuto</a> y llévate la comida. En tus desplazamientos de verano pasa por McAuto. <br /><br /> Las noches de verano saben mejor con McAuto: el mejor lugar para reponer fuerzas y seguir disfrutando.</p>
+						<p>Ya no tienes que perder el tiempo en cocinar y en ponerte de acuerdo con los demás para ver qué comer. De camino a la playa, <a class="font-bold text-[#FFBC0D] underline" href="https://mcdonalds.es/restaurantes" target="_blank" rel="sponsored">pasa por McAuto</a> para llevarte la comida/cena lista. Descubre cómo las noches de verano saben mejor con McAuto, el mejor lugar para reponer fuerzas y continuar disfrutando de las vacaciones. <br /><br />Además, si haces tu pedido a través de la app con MyOrder ahorrarás más tiempo, podrás repetir tus pedidos anteriores y acumularás puntos en la app.</p>
 					</div>
 				</div>
 				<Image class="relative -z-20 size-56 rounded-full object-cover reveal:scale-50 reveal:opacity-0 md:size-80" src={imgCircle01} width={480} alt="" quality={100} />
