--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -121,7 +121,7 @@ import imgCircle05 from '$assets/images/circle-05.webp'
 				<div class="relative max-w-64 reveal:translate-y-24 reveal:opacity-0">
 					<span class="absolute inset-0 -z-10 -translate-x-2 translate-y-2 rounded-2xl bg-current"></span>
 					<div class="rounded-2xl border-2 border-current bg-white p-6 leading-tight">
-						<p>Y cuando cae la noche y el hambre ataca, McDonald's se presenta como el superhéroe de las cenas tardías. <strong>"Las noches de verano saben mejor con <a class="font-bold text-[#FFBC0D] underline" href="https://mcdonalds.es/restaurantes" target="_blank" rel="sponsored">McAuto"</a></strong>, dicen. Esta revolución en la forma de pedir comida no es solo cuestión de conveniencia. Es poder disfrutar de la playa hasta el último rayo de sol sin preocuparse por la cena. Es la libertad de improvisar un viaje por carretera sin miedo a morir de hambre en medio de la nada.</p>
+						<p><strong>"Las noches de verano saben mejor con <a class="font-bold text-[#FFBC0D] underline" href="https://mcdonalds.es/restaurantes" target="_blank" rel="sponsored">McAuto"</a></strong>, dicen. Esta revolución en la forma de pedir comida no es solo cuestión de conveniencia. Es poder disfrutar de la playa hasta el último rayo de sol sin preocuparse por la cena. Es la libertad de improvisar un viaje por carretera sin miedo a morir de hambre en medio de la nada.</p>
 					</div>
 				</div>
 			</div>
@@ -176,7 +176,7 @@ import imgCircle05 from '$assets/images/circle-05.webp'
 	</main>
 
 	<div class="fixed right-4 top-12 z-50 origin-top-right text-center max-md:scale-75 lg:right-8 lg:top-20">
-		<a class="flex w-32 rounded border border-[#004612] bg-[#ffbc0d] p-2 px-4 font-bold hover:bg-[#004612] hover:text-[#ffbc0d]" href="https://mcdonalds.es/restaurantes" rel="sponsored" target="_blank">ENCUENTRA TU MCAUTO</a>
+		<a class="flex w-32 rounded border border-[#004612] bg-[#ffbc0d] p-2 px-4 font-bold hover:bg-[#004612] hover:text-[#ffbc0d]" href="https://mcdonalds.es/restaurantes" rel="sponsored" target="_blank">ENCUENTRA TU McAuto</a>
 		<!--
 		<Icon name="crono" />
 		<span id="timer1" class="absolute inset-x-0 top-12 font-black leading-none text-black">2:00</span>
