--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -217,7 +217,7 @@ const metaDescription = 'McDonald’s lanza el reto McAuto con el que se comprom
 		</noscript>
 		<!-- End Google Tag Manager Eltiempo.es -->
 	</head>
-	<body>
+	<body class="font-speedee">
 		<header class="m1 m1_t container bg-white py-2">
 			<div class="m1_c">
 				<div class="m1_r flex">
