--- a/src/main.css
+++ b/src/main.css
@@ -4,6 +4,28 @@
 
 @layer base {
 	@font-face {
+		font-family: 'speedee';
+		font-style: normal;
+		font-weight: 400;
+		font-display: swap;
+		src: url(./assets/fonts/speedee-Regular.woff2) format('woff2');
+	}
+	@font-face {
+		font-family: 'speedee';
+		font-style: normal;
+		font-weight: 700;
+		font-display: swap;
+		src: url(./assets/fonts/speedee-Bold.woff2) format('woff2');
+	}
+	@font-face {
+		font-family: 'speedee';
+		font-style: normal;
+		font-weight: 900;
+		font-display: swap;
+		src: url(./assets/fonts/speedee-Bold.woff2) format('woff2');
+	}
+
+	@font-face {
 		font-family: 'Air';
 		font-style: normal;
 		font-weight: 400;
@@ -24,6 +46,7 @@
 		font-display: swap;
 		src: url(./assets/fonts/Air-Black.woff2) format('woff2');
 	}
+
 	@media (max-width: 400px) {
 		html {
 			font-size: 4vw;
