--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,7 +2,7 @@
 import '../main.css'
 
 const metaTitle = 'Tu verano sin interrupciones'
-const metaDescription = 'McDonald’s lanza el reto McAuto con el que se compromete a entregarte tu pedido en un máximo de 2 minutos desde que pagas, so pena de 4 nuggets sino lo consiguen.'
+const metaDescription = 'McDonald’s lanza el reto McAuto® con el que se compromete a entregarte tu pedido en un máximo de 2 minutos desde que pagas, so pena de 4 nuggets sino lo consiguen.'
 ---
 
 <!doctype html>
