--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -46,7 +46,7 @@ import imgCircle05 from '$assets/images/circle-05.webp'
 				<div class="relative -mb-16 ml-auto max-w-64 reveal:translate-y-24 reveal:opacity-0 md:-mb-28">
 					<span class="absolute inset-0 -z-10 -translate-x-2 translate-y-2 rounded-2xl bg-current"></span>
 					<div class="rounded-2xl border-2 border-current bg-white p-6 leading-tight">
-						<p>Ya no tienes que perder el tiempo en cocinar y en ponerte de acuerdo con los demás para ver qué comer. De camino a la playa, <a class="font-bold text-[#FFBC0D] underline" href="https://mcdonalds.es/restaurantes" target="_blank" rel="sponsored">pasa por McAuto</a> para llevarte la comida/cena lista. Descubre cómo las noches de verano saben mejor con McAuto, el mejor lugar para reponer fuerzas y continuar disfrutando de las vacaciones. <br /><br />Además, si haces tu pedido a través de la app con MyOrder ahorrarás más tiempo, podrás repetir tus pedidos anteriores y acumularás puntos en la app.</p>
+						<p>Ya no tienes que perder el tiempo en cocinar y en ponerte de acuerdo con los demás para ver qué comer. De camino a la playa, <a class="font-bold text-[#FFBC0D] underline" href="https://mcdonalds.es/restaurantes" target="_blank" rel="sponsored">pasa por McAuto®</a> para llevarte la comida/cena lista. Descubre cómo las noches de verano saben mejor con McAuto®, el mejor lugar para reponer fuerzas y continuar disfrutando de las vacaciones. <br /><br />Además, si haces tu pedido a través de la app con MyOrder ahorrarás más tiempo, podrás repetir tus pedidos anteriores y acumularás puntos en la app.</p>
 					</div>
 				</div>
 				<Image class="relative -z-20 size-56 rounded-full object-cover reveal:scale-50 reveal:opacity-0 md:size-80" src={imgCircle01} width={480} alt="" quality={100} />
@@ -67,7 +67,7 @@ import imgCircle05 from '$assets/images/circle-05.webp'
 				<div class="relative -mt-16 ml-auto max-w-64 reveal:translate-y-24 reveal:opacity-0 md:-mt-36">
 					<span class="absolute inset-0 -z-10 -translate-x-2 translate-y-2 rounded-2xl bg-current"></span>
 					<div class="rounded-2xl border-2 border-current bg-white p-6 leading-tight">
-						<p>El <a target="_blank" rel="sponsored" class="font-bold text-[#FFBC0D] underline" href="https://mcdonalds.es/restaurantes">McAuto</a>, ese invento que nos permite <strong>pedir comida sin despeinarnos</strong> (más de lo que ya estamos después de un día de playa), se está convirtiendo en el mejor amigo del veraneante perezoso. ¿Quién necesita cocinar cuando puedes pasar por el <a target="_blank" rel="sponsored" class="font-bold text-[#FFBC0D] underline" href="https://mcdonalds.es/restaurantes">McAuto</a> de camino a casa y fingir que has estado horas frente a los fogones?</p>
+						<p>El <a target="_blank" rel="sponsored" class="font-bold text-[#FFBC0D] underline" href="https://mcdonalds.es/restaurantes">McAuto®</a>, ese invento que nos permite <strong>pedir comida sin despeinarnos</strong> (más de lo que ya estamos después de un día de playa), se está convirtiendo en el mejor amigo del veraneante perezoso. ¿Quién necesita cocinar cuando puedes pasar por el <a target="_blank" rel="sponsored" class="font-bold text-[#FFBC0D] underline" href="https://mcdonalds.es/restaurantes">McAuto®</a> de camino a casa y fingir que has estado horas frente a los fogones?</p>
 					</div>
 				</div>
 			</div>
@@ -108,7 +108,7 @@ import imgCircle05 from '$assets/images/circle-05.webp'
 				<div class="relative -mt-16 ml-auto max-w-64 reveal:translate-y-24 reveal:opacity-0 md:-mt-48">
 					<span class="absolute inset-0 -z-10 -translate-x-2 translate-y-2 rounded-2xl bg-current"></span>
 					<div class="rounded-2xl border-2 border-current bg-white p-6 leading-tight">
-						<p>Pero McDonald's no se conforma con salvarte de cocinar después de un día de playa. Oh, no. También quiere ser <strong>tu compañero de viaje</strong> en esas excursiones veraniegas donde el GPS te lleva por caminos de cabras. Un <a target="_blank" rel="sponsored" class="font-bold text-[#FFBC0D] underline" href="https://mcdonalds.es/restaurantes">McAuto</a> estratégicamente ubicado puede ser el oasis en medio de ese desierto de aburrimiento que son las autopistas.</p>
+						<p>Pero McDonald's no se conforma con salvarte de cocinar después de un día de playa. Oh, no. También quiere ser <strong>tu compañero de viaje</strong> en esas excursiones veraniegas donde el GPS te lleva por caminos de cabras. Un <a target="_blank" rel="sponsored" class="font-bold text-[#FFBC0D] underline" href="https://mcdonalds.es/restaurantes">McAuto®</a> estratégicamente ubicado puede ser el oasis en medio de ese desierto de aburrimiento que son las autopistas.</p>
 					</div>
 				</div>
 			</div>
@@ -121,7 +121,7 @@ import imgCircle05 from '$assets/images/circle-05.webp'
 				<div class="relative max-w-64 reveal:translate-y-24 reveal:opacity-0">
 					<span class="absolute inset-0 -z-10 -translate-x-2 translate-y-2 rounded-2xl bg-current"></span>
 					<div class="rounded-2xl border-2 border-current bg-white p-6 leading-tight">
-						<p><strong>"Las noches de verano saben mejor con <a class="font-bold text-[#FFBC0D] underline" href="https://mcdonalds.es/restaurantes" target="_blank" rel="sponsored">McAuto"</a></strong>, dicen. Esta revolución en la forma de pedir comida no es solo cuestión de conveniencia. Es poder disfrutar de la playa hasta el último rayo de sol sin preocuparse por la cena. Es la libertad de improvisar un viaje por carretera sin miedo a morir de hambre en medio de la nada.</p>
+						<p><strong>"Las noches de verano saben mejor con <a class="font-bold text-[#FFBC0D] underline" href="https://mcdonalds.es/restaurantes" target="_blank" rel="sponsored">McAuto®"</a></strong>, dicen. Esta revolución en la forma de pedir comida no es solo cuestión de conveniencia. Es poder disfrutar de la playa hasta el último rayo de sol sin preocuparse por la cena. Es la libertad de improvisar un viaje por carretera sin miedo a morir de hambre en medio de la nada.</p>
 					</div>
 				</div>
 			</div>
@@ -145,7 +145,7 @@ import imgCircle05 from '$assets/images/circle-05.webp'
 
 		<div class="reveal overflow-clip bg-[#FFBC0D]">
 			<div class="container py-24 reveal:translate-y-24 reveal:opacity-0">
-				<h3 class="mx-auto max-w-3xl text-center text-xl font-bold md:text-3xl">Así que la próxima vez que estés de vacaciones y el hambre apriete, recuerda: tu smartphone ya no es solo para hacer selfies en la playa. Ahora también es tu pasaporte a un mundo donde la comida está en <a href="https://mcdonalds.es/restaurantes" target="_blank" rel="sponsored" class="font-bold underline">McAuto</a>. Así es el futuro de la comida, donde las hamburguesas casi tienen GPS propio.</h3>
+				<h3 class="mx-auto max-w-3xl text-center text-xl font-bold md:text-3xl">Así que la próxima vez que estés de vacaciones y el hambre apriete, recuerda: tu smartphone ya no es solo para hacer selfies en la playa. Ahora también es tu pasaporte a un mundo donde la comida está en <a href="https://mcdonalds.es/restaurantes" target="_blank" rel="sponsored" class="font-bold underline">McAuto®</a>. Así es el futuro de la comida, donde las hamburguesas casi tienen GPS propio.</h3>
 			</div>
 		</div>
 
@@ -176,7 +176,7 @@ import imgCircle05 from '$assets/images/circle-05.webp'
 	</main>
 
 	<div class="fixed right-4 top-12 z-50 origin-top-right text-center max-md:scale-75 lg:right-8 lg:top-20">
-		<a class="flex w-32 rounded border border-[#004612] bg-[#ffbc0d] p-2 px-4 font-bold hover:bg-[#004612] hover:text-[#ffbc0d]" href="https://mcdonalds.es/restaurantes" rel="sponsored" target="_blank">ENCUENTRA TU McAuto</a>
+		<a class="flex w-32 rounded border border-[#004612] bg-[#ffbc0d] p-2 px-4 font-bold hover:bg-[#004612] hover:text-[#ffbc0d]" href="https://mcdonalds.es/restaurantes" rel="sponsored" target="_blank">ENCUENTRA TU McAuto®</a>
 		<!--
 		<Icon name="crono" />
 		<span id="timer1" class="absolute inset-x-0 top-12 font-black leading-none text-black">2:00</span>
